unpackaged/main/default/objects/project_cloud__Checklist_Item__c/project_cloud__Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>