unpackaged/main/default/objects/project_cloud__Checklist_Item__c/fields/project_cloud__Checklist__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Checklist__c</fullName>
    <description>The checklist that this item belongs to.</description>
    <label>Checklist</label>
    <referenceTo>project_cloud__Checklist__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>