unpackaged/main/default/objects/project_cloud__Checklist_Item__c/fields/project_cloud__Checklist_Group__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Checklist_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The checklist group that this item belongs to</description>
    <label>Checklist Group</label>
    <referenceTo>project_cloud__Checklist_Group__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>