unpackaged/main/default/objects/project_cloud__Checklist_Item__c/fields/project_cloud__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Date__c</fullName>
    <description>Date on which the Checklist Item was marked as completed.</description>
    <inlineHelpText>This field is stamped automatically when the item is marked as complete.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>