unpackaged/main/default/objects/project_cloud__Checklist_Item__c/fields/project_cloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Due_Date__c</fullName>
    <description>The date that this item is due to be completed.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>