unpackaged/main/default/objects/project_cloud__Checklist_Item__c/fields/project_cloud__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value that determines whether a checklist item has been completed or not</description>
    <inlineHelpText>When checked, indicates the Checklist Item is Complete.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>